# clean

./: .gitignore  CONTRIBUTING.md  EXAMPLE.md  README.md  lake-manifest.json  lakefile.lean  spec.md  spec2.md
config/: baselines-manifest.json  cairo_pinned_commit.txt  completion-matrix-schema.json  effect-metadata.json  examples-manifest.json  gate-manifest.json  optimizer-family-thresholds.json
docs/: specification-compliance.md
examples/: README.md
roadmap/: 00-charter-and-completion-definition.md  01-canonical-upstream-surfaces.md  02-target-compiler-architecture.md  03-typed-ir-generalization-plan.md  04-semantics-proof-and-law-plan.md  05-track-a-lean-to-sierra-functions.md  06-track-b-lean-to-cairo-functions.md  07-low-level-optimization-sierra-casm.md  08-quality-gates-bench-and-release.md  09-milestones-and-execution-order.md  10-risk-register-and-mitigations.md  11-evaluator-type-domain-separation.md  12-direct-sierra-subset-coverage-ledger.md  13-function-subset-expansion-engine.md  14-complex-function-corpus-and-benchmarking-lab.md  15-proof-obligation-and-gate-scaling.md  16-capability-registry-schema-and-projection-system.md  17-type-system-and-semantics-closure-program.md  18-effects-control-flow-and-resource-semantics.md  19-track-a-sierra-family-closure-execution-plan.md  20-track-b-cairo-parity-and-reviewability-plan.md  21-function-corpus-and-baseline-expansion-program.md  22-benchmarking-cost-model-and-profiling-governance.md  README.md  proof-debt.json  (+4 more)
tools/sierra_toolchain/: Cargo.toml
tools/sierra_toolchain/src/: main.rs
(+542 files in other folders)
