[package]
name = "sierra_toolchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "e56055c87a9db4e3dbb91c82ccb2ea751a8dc617", package = "cairo-lang-sierra" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "e56055c87a9db4e3dbb91c82ccb2ea751a8dc617", package = "cairo-lang-sierra-type-size" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "e56055c87a9db4e3dbb91c82ccb2ea751a8dc617", package = "cairo-lang-sierra-to-casm" }
